# UBCOAerospace_Avionics

./: .gitignore  CMakeLists.txt  README.md
Anshlabs_Ansh_Device/: Anshlabs_Ansh_Device.ino
Archive/GSE 2024-25/control_box_esp32_final/: control_box_esp32_final.ino
Archive/GSE 2024-25/control_box_lora_final/: control_box_lora_final.ino
Archive/GSE 2024-25/ground_station_lora_pressure_calibration/: ground_station_lora_pressure_calibration.ino
Archive/GSE 2024-25/ground_station_lora_translate_final/: ground_station_lora_translate_final.ino
Libraries/: CMakeLists.txt
Libraries/Communications/: CMakeLists.txt
Libraries/Config/: CMakeLists.txt
Libraries/Logging/: CMakeLists.txt
Libraries/Serial/: CMakeLists.txt
Libraries/SystemBase/: CMakeLists.txt
Libraries/SystemBase/include/: Scheduler.h
Libraries/SystemBase/src/: Scheduler.cpp
Libraries/Video/: CMakeLists.txt
Rocketry Tests/Working_motor/: Working_motor.ino
Rocketry Tests/control_panel_leds_test/: control_panel_leds_test.ino
Rocketry Tests/ignition_relay_test/: ignition_relay_test.ino
Rocketry Tests/led_displays_test/: led_displays_test.ino
Rocketry Tests/neopixel_test/: neopixel_test.ino
Rocketry Tests/pressure_sensor_debugging/: pressure_sensor_debugging.ino
Rocketry Tests/sd_card_debugging/: sd_card_debugging.ino
Rocketry Tests/servoControl_with_SDcard/: servoControl_with_SDcard.ino
Systems/OwenLogger/: platformio.ini
Systems/Pi/: CMakeLists.txt  main.cpp
Systems/Pi/include/: Scheduler_PI.h
Systems/Pi/include/DataStructures/: PiConfig.h
Systems/Pi/src/: Scheduler_PI.cpp
Systems/miniComputer/Backend/: CMakeLists.txt  main.cpp
Systems/miniComputer/Backend/include/: Scheduler_miniPC.h
Systems/miniComputer/Backend/include/DataStuctures/: FootballConfig.h  Subsystem.h
Systems/miniComputer/Backend/src/: Scheduler_miniPC.cpp
Systems/miniComputer/Backend/src/DataStructures/: FootballConfig.cpp  Subsystem.cpp
data_logger/OwenLogger/: LICENSE.txt  platformio.ini
docs/: system-overview.md
football/: requirements.txt
football/Pi/: CMakeLists.txt  main.cpp
football/Pi/include/DataStructures/: PiConfig.h
football/Pi/src/DataStructures/: PiConfig.cpp
football/miniComputer/Backend/: CMakeLists.txt  main.cpp
football/miniComputer/Backend/Classes/: Scheduler.cpp  Scheduler.h
football/miniComputer/Backend/include/: Scheduler.h
football/miniComputer/Backend/include/DataStuctures/: FootballConfig.h
football/miniComputer/Backend/src/: Scheduler.cpp
football/pi/: CMakeLists.txt  main.cpp  main.py
lora_football/: lora_football.ino
lora_football_RevP6/: lora_football_RevP6.ino
lora_station/: lora_station.ino
mega_football/: mega_football.ino
mega_station/: mega_station.ino
(+33 files in other folders)
